client/web/src/codeintel/ReferencesPanel.module.scss
$filter-input-height: 1.5rem;
.filter {
    height: $filter-input-height;
    padding-left: 1rem;
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;

    border-bottom: 1px solid var(--body-bg);

    input {
        height: 1rem;
        font-size: 0.75rem;
        padding-left: 0.5rem;
        padding-top: 0;
        padding-bottom: 0;
        border: none;
    }

    &--icon {
        color: var(--icon-muted);
    }
}

.repo-location-group {
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
    padding-left: 2.3rem;
    width: 100%;
    text-align: left;

    font-weight: 400;

    &--repo-name {
        padding-left: 0.6rem;
    }
}

.location-group {
    padding-left: 3.75rem;
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
    width: 100%;
    text-align: left;

    transition: none !important;

    &--filename {
        padding-left: 0.6rem;
        font-weight: 400;

        mark {
            padding-left: 0;
            padding-right: 0;
            font-weight: bold;
        }
    }
}

.location {
    button {
        padding-left: 3.9rem;
        padding-top: 0;
        padding-bottom: 0;
        width: 100%;
        text-align: left;

        transition: none !important;
    }

    button:hover {
        background-color: var(--color-bg-2);
    }

    code {
        overflow: hidden;
        color: var(--body-color);
    }

    &--active {
        background-color: var(--color-bg-2);
    }

    &--link {
        color: inherit;

        &--line-number {
            font-family: monospace;
            font-weight: 400;
            color: var(--link-color);
        }
    }
}

$card-header-height: 1.5rem;
.card-header {
    padding-top: 0.1rem;
    padding-bottom: 0.1rem;
    padding-left: 1rem;

    border: none;

    height: $card-header-height;

    background-color: var(--body-bg);

    &--big {
        padding-top: 0.3rem;
        padding-bottom: 0.3rem;
        padding-left: 1rem;

        border: none;

        height: 1.8rem;

        background-color: var(--body-bg);

        h4 {
            padding-left: 0.6rem;
        }
    }

    &--small-text {
        font-weight: 400;
    }
}

// Complete panel
.panel {
    display: flex;
    // Ensure panel spans entire height of enclosing panel
    height: 100%;
}

// Left side of the panel, including token name, filter, list of locations
.left-sub-panel {
    flex: 1;
    overflow: auto;
    height: 100%;
}

// Right side of the panel
.right-sub-panel {
    flex: 1;
    overflow: auto;
}

.references {
    // Left side of the panel: only list
    &--side-references-list {
        // height: calc(100% - #{$filter-input-height} - #{$card-header-height});
        // overflow-y: auto;
        // overflow-x: hidden;
    }

}

.side-blob {
    &--filename {
        height: 1rem;
        vertical-align: middle;
    }

    &--collapse-button {
        margin-right: 0.5rem;
    }

    &--code {
        height: 100%;
    }
}

